switch to Java 1.8, fixed a deprecation warning