@@ -20,7 +20,7 @@ import java.io.Reader;
  *      JPanel myPanel = new JPanel();
  *      new FileDrop( myPanel, new FileDrop.Listener()
  *      {   public void filesDropped( java.io.File[] files )
- *          {   
+ *          {
  *              // handle file drop
  *              ...
  *          }   // end filesDropped
@@ -49,14 +49,14 @@ public class FileDrop
 {
     private transient javax.swing.border.Border normalBorder;
     private transient java.awt.dnd.DropTargetListener dropListener;
-    
-    
+
+
     /** Discover if the running JVM is modern enough to have drag and drop. */
     private static Boolean supportsDnD;
-    
+
     // Default border color
     private static java.awt.Color defaultBorderColor = new java.awt.Color( 0f, 0f, 1f, 0.25f );
-    
+
     /**
      * Constructs a {@link FileDrop} with a default light-blue border
      * and, if <var>c</var> is a {@link java.awt.Container}, recursively
@@ -76,10 +76,10 @@ public class FileDrop
               true, // Recursive
               listener );
     }   // end constructor
-    
-    
-    
-    
+
+
+
+
     /**
      * Constructor with a default border and the option to recursively set drop targets.
      * If your component is a <tt>java.awt.Container</tt>, then each of its children
@@ -100,8 +100,8 @@ public class FileDrop
               recursive, // Recursive
               listener );
     }   // end constructor
-    
-    
+
+
     /**
      * Constructor with a default border and debugging optionally turned on.
      * With Debugging turned on, more status messages will be displayed to
@@ -110,7 +110,7 @@ public class FileDrop
      * the parameter <tt>out</tt> will result in no debugging output.
      *
      * @param out PrintStream to record debugging info or null for no debugging.
-     * @param out 
+     * @param out
      * @param c Component on which files will be dropped.
      * @param listener Listens for <tt>filesDropped</tt>.
      * @since 1.0
@@ -121,13 +121,13 @@ public class FileDrop
     final Listener listener )
     {   this( out,  // Logging stream
               c,    // Drop target
-              javax.swing.BorderFactory.createMatteBorder( 2, 2, 2, 2, defaultBorderColor ), 
+              javax.swing.BorderFactory.createMatteBorder( 2, 2, 2, 2, defaultBorderColor ),
               false, // Recursive
               listener );
     }   // end constructor
-    
-        
-    
+
+
+
     /**
      * Constructor with a default border, debugging optionally turned on
      * and the option to recursively set drop targets.
@@ -139,7 +139,7 @@ public class FileDrop
      * the parameter <tt>out</tt> will result in no debugging output.
      *
      * @param out PrintStream to record debugging info or null for no debugging.
-     * @param out 
+     * @param out
      * @param c Component on which files will be dropped.
      * @param recursive Recursively set children as drop targets.
      * @param listener Listens for <tt>filesDropped</tt>.
@@ -156,12 +156,12 @@ public class FileDrop
               recursive, // Recursive
               listener );
     }   // end constructor
-    
-    
-    
-    
+
+
+
+
     /**
-     * Constructor with a specified border 
+     * Constructor with a specified border
      *
      * @param c Component on which files will be dropped.
      * @param dragBorder Border to use on <tt>JComponent</tt> when dragging occurs.
@@ -171,7 +171,7 @@ public class FileDrop
     public FileDrop(
     final java.awt.Component c,
     final javax.swing.border.Border dragBorder,
-    final Listener listener) 
+    final Listener listener)
     {   this(
             null,   // Logging stream
             c,      // Drop target
@@ -179,10 +179,10 @@ public class FileDrop
             false,  // Recursive
             listener );
     }   // end constructor
-    
-    
-        
-    
+
+
+
+
     /**
      * Constructor with a specified border and the option to recursively set drop targets.
      * If your component is a <tt>java.awt.Container</tt>, then each of its children
@@ -198,7 +198,7 @@ public class FileDrop
     final java.awt.Component c,
     final javax.swing.border.Border dragBorder,
     final boolean recursive,
-    final Listener listener) 
+    final Listener listener)
     {   this(
             null,
             c,
@@ -206,9 +206,9 @@ public class FileDrop
             recursive,
             listener );
     }   // end constructor
-    
-            
-    
+
+
+
     /**
      * Constructor with a specified border and debugging optionally turned on.
      * With Debugging turned on, more status messages will be displayed to
@@ -226,7 +226,7 @@ public class FileDrop
     final java.io.PrintStream out,
     final java.awt.Component c,
     final javax.swing.border.Border dragBorder,
-    final Listener listener) 
+    final Listener listener)
     {   this(
             out,    // Logging stream
             c,      // Drop target
@@ -234,11 +234,11 @@ public class FileDrop
             false,  // Recursive
             listener );
     }   // end constructor
-    
-    
-    
-    
-    
+
+
+
+
+
     /**
      * Full constructor with a specified border and debugging optionally turned on.
      * With Debugging turned on, more status messages will be displayed to
@@ -258,9 +258,9 @@ public class FileDrop
     final java.awt.Component c,
     final javax.swing.border.Border dragBorder,
     final boolean recursive,
-    final Listener listener) 
-    {   
-        
+    final Listener listener)
+    {
+
         if( supportsDnD() )
         {   // Make a drop listener
             dropListener = new java.awt.dnd.DropTargetListener()
@@ -277,21 +277,21 @@ public class FileDrop
                             log( out, "FileDrop: normal border saved." );
                             jc.setBorder( dragBorder );
                             log( out, "FileDrop: drag border set." );
-                        }   // end if: JComponent   
+                        }   // end if: JComponent
 
                         // Acknowledge that it's okay to enter
                         //evt.acceptDrag( java.awt.dnd.DnDConstants.ACTION_COPY_OR_MOVE );
                         evt.acceptDrag( java.awt.dnd.DnDConstants.ACTION_COPY );
                         log( out, "FileDrop: event accepted." );
                     }   // end if: drag ok
-                    else 
+                    else
                     {   // Reject the drag event
                         evt.rejectDrag();
                         log( out, "FileDrop: event rejected." );
                     }   // end else: drag not ok
                 }   // end dragEnter
 
-                public void dragOver( java.awt.dnd.DropTargetDragEvent evt ) 
+                public void dragOver( java.awt.dnd.DropTargetDragEvent evt )
                 {   // This is called continually as long as the mouse is
                     // over the drag target.
                 }   // end dragOver
@@ -311,7 +311,7 @@ public class FileDrop
                             log( out, "FileDrop: file list accepted." );
 
                             // Get a useful list
-                            java.util.List fileList = (java.util.List) 
+                            java.util.List fileList = (java.util.List)
                                 tr.getTransferData(java.awt.datatransfer.DataFlavor.javaFileListFlavor);
                             java.util.Iterator iterator = fileList.iterator();
 
@@ -344,10 +344,10 @@ public class FileDrop
                                     Reader reader = flavors[zz].getReaderForText(tr);
 
                                     BufferedReader br = new BufferedReader(reader);
-                                    
+
                                     if(listener != null)
                                         listener.filesDropped(createFileArray(br, out));
-                                    
+
                                     // Mark that drop is completed.
                                     evt.getDropTargetContext().dropComplete(true);
                                     log(out, "FileDrop: drop complete.");
@@ -362,12 +362,12 @@ public class FileDrop
                             // END 2007-09-12 Nathan Blomquist -- Linux (KDE/Gnome) support added.
                         }   // end else: not a file list
                     }   // end try
-                    catch ( java.io.IOException io) 
+                    catch ( java.io.IOException io)
                     {   log( out, "FileDrop: IOException - abort:" );
                         io.printStackTrace( out );
                         evt.rejectDrop();
                     }   // end catch IOException
-                    catch (java.awt.datatransfer.UnsupportedFlavorException ufe) 
+                    catch (java.awt.datatransfer.UnsupportedFlavorException ufe)
                     {   log( out, "FileDrop: UnsupportedFlavorException - abort:" );
                         ufe.printStackTrace( out );
                         evt.rejectDrop();
@@ -383,7 +383,7 @@ public class FileDrop
                     }   // end finally
                 }   // end drop
 
-                public void dragExit( java.awt.dnd.DropTargetEvent evt ) 
+                public void dragExit( java.awt.dnd.DropTargetEvent evt )
                 {   log( out, "FileDrop: dragExit event." );
                     // If it's a Swing component, reset its border
                     if( c instanceof javax.swing.JComponent )
@@ -393,7 +393,7 @@ public class FileDrop
                     }   // end if: JComponent
                 }   // end dragExit
 
-                public void dropActionChanged( java.awt.dnd.DropTargetDragEvent evt ) 
+                public void dropActionChanged( java.awt.dnd.DropTargetDragEvent evt )
                 {   log( out, "FileDrop: dropActionChanged event." );
                     // Is this an acceptable drag event?
                     if( isDragOk( out, evt ) )
@@ -401,7 +401,7 @@ public class FileDrop
                         evt.acceptDrag( java.awt.dnd.DnDConstants.ACTION_COPY );
                         log( out, "FileDrop: event accepted." );
                     }   // end if: drag ok
-                    else 
+                    else
                     {   evt.rejectDrag();
                         log( out, "FileDrop: event rejected." );
                     }   // end else: drag not ok
@@ -416,11 +416,11 @@ public class FileDrop
         }   // end else: does not support DnD
     }   // end constructor
 
-    
+
     private static boolean supportsDnD()
     {   // Static Boolean
         if( supportsDnD == null )
-        {   
+        {
             boolean support = false;
             try
             {   Class arbitraryDndClass = Class.forName( "java.awt.dnd.DnDConstants" );
@@ -429,24 +429,24 @@ public class FileDrop
             catch( Exception e )
             {   support = false;
             }   // end catch
-            supportsDnD = new Boolean( support );
+            supportsDnD = Boolean.valueOf( support );
         }   // end if: first time through
         return supportsDnD.booleanValue();
     }   // end supportsDnD
-    
-    
+
+
      // BEGIN 2007-09-12 Nathan Blomquist -- Linux (KDE/Gnome) support added.
      private static String ZERO_CHAR_STRING = "" + (char)0;
      private static File[] createFileArray(BufferedReader bReader, PrintStream out)
      {
-        try { 
+        try {
             java.util.List list = new java.util.ArrayList();
             java.lang.String line = null;
             while ((line = bReader.readLine()) != null) {
                 try {
                     // kde seems to append a 0 char to the end of the reader
-                    if(ZERO_CHAR_STRING.equals(line)) continue; 
-                    
+                    if(ZERO_CHAR_STRING.equals(line)) continue;
+
                     java.io.File file = new java.io.File(new java.net.URI(line));
                     list.add(file);
                 } catch (Exception ex) {
@@ -461,8 +461,8 @@ public class FileDrop
         return new File[0];
      }
      // END 2007-09-12 Nathan Blomquist -- Linux (KDE/Gnome) support added.
-     
-    
+
+
     private void makeDropTarget( final java.io.PrintStream out, final java.awt.Component c, boolean recursive )
     {
         // Make drop target
@@ -474,7 +474,7 @@ public class FileDrop
         {   e.printStackTrace();
             log(out, "FileDrop: Drop will not work due to previous error. Do you have another listener attached?" );
         }   // end catch
-        
+
         // Listen for hierarchy changes and remove the drop target when the parent gets cleared out.
         c.addHierarchyListener( new java.awt.event.HierarchyListener()
         {   public void hierarchyChanged( java.awt.event.HierarchyEvent evt )
@@ -492,34 +492,34 @@ public class FileDrop
         }); // end hierarchy listener
         if( c.getParent() != null )
             new java.awt.dnd.DropTarget(c, dropListener);
-        
+
         if( recursive && (c instanceof java.awt.Container ) )
-        {   
+        {
             // Get the container
             java.awt.Container cont = (java.awt.Container) c;
-            
+
             // Get it's components
             java.awt.Component[] comps = cont.getComponents();
-            
+
             // Set it's components as listeners also
             for( int i = 0; i < comps.length; i++ )
                 makeDropTarget( out, comps[i], recursive );
         }   // end if: recursively set components as listener
     }   // end dropListener
-    
-    
-    
+
+
+
     /** Determine if the dragged data is a file list. */
     private boolean isDragOk( final java.io.PrintStream out, final java.awt.dnd.DropTargetDragEvent evt )
     {   boolean ok = false;
-        
+
         // Get data flavors being dragged
         java.awt.datatransfer.DataFlavor[] flavors = evt.getCurrentDataFlavors();
-        
+
         // See if any of the flavors are a file list
         int i = 0;
         while( !ok && i < flavors.length )
-        {   
+        {
             // BEGIN 2007-09-12 Nathan Blomquist -- Linux (KDE/Gnome) support added.
             // Is the flavor a file list?
             final DataFlavor curFlavor = flavors[i];
@@ -530,7 +530,7 @@ public class FileDrop
             // END 2007-09-12 Nathan Blomquist -- Linux (KDE/Gnome) support added.
             i++;
         }   // end while: through flavors
-        
+
         // If logging is enabled, show data flavors
         if( out != null )
         {   if( flavors.length == 0 )
@@ -538,11 +538,11 @@ public class FileDrop
             for( i = 0; i < flavors.length; i++ )
                 log( out, flavors[i].toString() );
         }   // end if: logging enabled
-        
+
         return ok;
     }   // end isDragOk
-    
-    
+
+
     /** Outputs <tt>message</tt> to <tt>out</tt> if it's not null. */
     private static void log( java.io.PrintStream out, String message )
     {   // Log message if requested
@@ -550,9 +550,9 @@ public class FileDrop
             out.println( message );
     }   // end log
 
-    
-    
-    
+
+
+
     /**
      * Removes the drag-and-drop hooks from the component and optionally
      * from the all children. You should call this if you add and remove
@@ -566,9 +566,9 @@ public class FileDrop
     public static boolean remove( java.awt.Component c)
     {   return remove( null, c, true );
     }   // end remove
-    
-    
-    
+
+
+
     /**
      * Removes the drag-and-drop hooks from the component and optionally
      * from the all children. You should call this if you add and remove
@@ -594,13 +594,13 @@ public class FileDrop
         }   // end if: supports DnD
         else return false;
     }   // end remove
-    
-    
 
-    
-/* ********  I N N E R   I N T E R F A C E   L I S T E N E R  ******** */    
-    
-    
+
+
+
+/* ********  I N N E R   I N T E R F A C E   L I S T E N E R  ******** */
+
+
     /**
      * Implement this inner interface to listen for when files are dropped. For example
      * your class declaration may begin like this:
@@ -617,7 +617,7 @@ public class FileDrop
      * @since 1.1
      */
     public static interface Listener {
-       
+
         /**
          * This method is called when files have been successfully dropped.
          *
@@ -625,14 +625,14 @@ public class FileDrop
          * @since 1.0
          */
         public abstract void filesDropped( java.io.File[] files );
-        
-        
+
+
     }   // end inner-interface Listener
-    
-    
-/* ********  I N N E R   C L A S S  ******** */    
-    
-    
+
+
+/* ********  I N N E R   C L A S S  ******** */
+
+
     /**
      * This is the event that is passed to the
      * {@link FileDropListener#filesDropped filesDropped(...)} method in
@@ -640,7 +640,7 @@ public class FileDrop
      * a registered drop target.
      *
      * <p>I'm releasing this code into the Public Domain. Enjoy.</p>
-     * 
+     *
      * @author  Robert Harder
      * @author  rob@iharder.net
      * @version 1.2
@@ -673,13 +673,13 @@ public class FileDrop
         public java.io.File[] getFiles() {
             return files;
         }   // end getFiles
-    
+
     }   // end inner class Event
-    
-    
-    
+
+
+
 /* ********  I N N E R   C L A S S  ******** */
-    
+
 
     /**
      * At last an easy way to encapsulate your custom objects for dragging and dropping
@@ -709,7 +709,7 @@ public class FileDrop
      *      ...
      * </code></pre>
      *
-     * The {@link java.awt.datatransfer.DataFlavor} associated with 
+     * The {@link java.awt.datatransfer.DataFlavor} associated with
      * {@link TransferableObject} has the representation class
      * <tt>net.iharder.dnd.TransferableObject.class</tt> and MIME type
      * <tt>application/x-net.iharder.dnd.TransferableObject</tt>.
@@ -718,7 +718,7 @@ public class FileDrop
      *
      *
      * <p>I'm releasing this code into the Public Domain. Enjoy.</p>
-     * 
+     *
      * @author  Robert Harder
      * @author  rob@iharder.net
      * @version 1.2
@@ -726,7 +726,7 @@ public class FileDrop
     public static class TransferableObject implements java.awt.datatransfer.Transferable
     {
         /**
-         * The MIME type for {@link #DATA_FLAVOR} is 
+         * The MIME type for {@link #DATA_FLAVOR} is
          * <tt>application/x-net.iharder.dnd.TransferableObject</tt>.
          *
          * @since 1.1
@@ -738,26 +738,26 @@ public class FileDrop
          * The default {@link java.awt.datatransfer.DataFlavor} for
          * {@link TransferableObject} has the representation class
          * <tt>net.iharder.dnd.TransferableObject.class</tt>
-         * and the MIME type 
+         * and the MIME type
          * <tt>application/x-net.iharder.dnd.TransferableObject</tt>.
          *
          * @since 1.1
          */
-        public final static java.awt.datatransfer.DataFlavor DATA_FLAVOR = 
+        public final static java.awt.datatransfer.DataFlavor DATA_FLAVOR =
             new java.awt.datatransfer.DataFlavor( FileDrop.TransferableObject.class, MIME_TYPE );
 
 
         private Fetcher fetcher;
         private Object data;
 
-        private java.awt.datatransfer.DataFlavor customFlavor; 
+        private java.awt.datatransfer.DataFlavor customFlavor;
 
 
 
         /**
          * Creates a new {@link TransferableObject} that wraps <var>data</var>.
          * Along with the {@link #DATA_FLAVOR} associated with this class,
-         * this creates a custom data flavor with a representation class 
+         * this creates a custom data flavor with a representation class
          * determined from <code>data.getClass()</code> and the MIME type
          * <tt>application/x-net.iharder.dnd.TransferableObject</tt>.
          *
@@ -818,7 +818,7 @@ public class FileDrop
         }   // end getCustomDataFlavor
 
 
-    /* ********  T R A N S F E R A B L E   M E T H O D S  ******** */    
+    /* ********  T R A N S F E R A B L E   M E T H O D S  ******** */
 
 
         /**
@@ -831,8 +831,8 @@ public class FileDrop
          * @return An array of supported data flavors
          * @since 1.1
          */
-        public java.awt.datatransfer.DataFlavor[] getTransferDataFlavors() 
-        {   
+        public java.awt.datatransfer.DataFlavor[] getTransferDataFlavors()
+        {
             if( customFlavor != null )
                 return new java.awt.datatransfer.DataFlavor[]
                 {   customFlavor,
@@ -860,8 +860,8 @@ public class FileDrop
          * @since 1.1
          */
         public Object getTransferData( java.awt.datatransfer.DataFlavor flavor )
-        throws java.awt.datatransfer.UnsupportedFlavorException, java.io.IOException 
-        {   
+        throws java.awt.datatransfer.UnsupportedFlavorException, java.io.IOException
+        {
             // Native object
             if( flavor.equals( DATA_FLAVOR ) )
                 return fetcher == null ? data : fetcher.getObject();
@@ -885,7 +885,7 @@ public class FileDrop
          * @return Whether or not the flavor is supported
          * @since 1.1
          */
-        public boolean isDataFlavorSupported( java.awt.datatransfer.DataFlavor flavor ) 
+        public boolean isDataFlavorSupported( java.awt.datatransfer.DataFlavor flavor )
         {
             // Native object
             if( flavor.equals( DATA_FLAVOR ) )
@@ -900,7 +900,7 @@ public class FileDrop
         }   // end isDataFlavorSupported
 
 
-    /* ********  I N N E R   I N T E R F A C E   F E T C H E R  ******** */    
+    /* ********  I N N E R   I N T E R F A C E   F E T C H E R  ******** */
 
         /**
          * Instead of passing your data directly to the {@link TransferableObject}
@@ -931,8 +931,8 @@ public class FileDrop
 
     }   // end class TransferableObject
 
-    
-    
-    
-    
+
+
+
+
 }   // end class FileDrop
